--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.12.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9"
   }
 }
